# pmix-rs

./: .gitignore  ANALYSIS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  REVIEW.md  TASK_LOG.md  THREADING.md  THREADPLAN.md  build.rs  cobertura.xml  lcov.info  refactor_dvm_tests.py  tarpaulin-report.html  tarpaulin-report.json  update_dvm_tests.py  update_pmix_init_tests.py  wrapper.h
.cargo/: config.toml  config.toml.example
.porter/: manifest.json
benches/: data_serialization_bench.rs
examples/: client_minimal.rs  data_packing.rs  server_minimal.rs  simple_fence.rs  simple_put_get.rs  tool_attach.rs
scripts/: call_openrouter.py  remove_daemon_ignores.py  run_daemon_tests.sh
src/: allocation.rs  bindings.rs  cbdata.rs  cpu_locality.rs  data_ops.rs  data_serialization.rs  error.rs  events.rs  fabric.rs  ffi.rs  groups.rs  info.rs  lib.rs  mock_ffi.rs  monitoring.rs  proc.rs  process_mgmt.rs  query_log.rs  security.rs  server.rs  server.rs.task100.bak  tool.rs  types.rs  utility.rs  value.rs
tests/: allocation_Allocation_request_nb.rs  allocation_Job_control.rs  allocation_Job_control_nb.rs  allocation_deep.rs  cpu_locality_Get_cpuset.rs  cpu_locality_Get_relative_locality.rs  cpu_locality_Parse_cpuset_string.rs  daemon_data_ops_via_daemon.rs  daemon_data_serialization_via_daemon.rs  daemon_events_minimal.rs  daemon_events_via_daemon.rs  daemon_groups_via_daemon.rs  daemon_helper.rs  daemon_monitoring_minimal.rs  daemon_monitoring_via_daemon.rs  daemon_process_mgmt_via_daemon.rs  daemon_query_log_via_daemon.rs  daemon_security_via_daemon.rs  (+186 more)
(+23 files in other folders)
