[package]
name = "pmix"
version = "0.1.0"
edition = "2024"
description = "Low-level Rust bindings for PMIx (Process Management Interface for Exascale)"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["pmix", "hpc", "mpi", "process-management"]
categories = ["api-bindings", "science"]
repository = "https://github.com/KirgenR/pmix-rs"

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
cstring-array = "0.1"
libc = "0.2"

[dependencies.bitflags]
version = "2.11.0"

[dev-dependencies]
static_assertions = "1"
proptest = "1"
criterion = "0.5"

[[bench]]
name = "data_serialization_bench"
harness = false

[features]
default = []
# Enable mock FFI stubs outside #[cfg(test)] (integration harnesses / benches).
mock_ffi = []
